src/main/java/syntactic/test/failing/statementWithputParenthesis.ru
start {
    IO.out_int(0);
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 7 | Se esperaba [ID] pero se encontró DOT: . |